==================
### 1.5.2 (beta)
==================

** INCOMPATIBLE CHANGES **:
- For users of teleportAuto_search, in order to have it work you must now:
  * Set teleportAuto_idle to 1
  * Set ai_teleport_idle in timeouts.txt to the same as ai_teleport_search
  * Delete ai_teleport_search in timeouts.txt (it is obsolete)
  * Set route_randomWalk to 0


Bug fixes:
- Correctly detect pets.
- Fix all kinds of troubles regarding sitting and standing.
- Set maxDistance = distance (instead of defaulting to 30) in attackSkillSlot.
- The 'conf' chat command now works.
- partyAggressives now counts monsters your party attacked
- Fixed some cases of ksPlayers not working
- When following master around a corner, fallback to routing algorithm instead
  of trying to walk through the corner
- Don't increment maxUses counter for an attackSkillSlot until the skill is
  actually used (internal note: this counter is indexed using the monster ID
  and the skill ID, so if you have more than one attackSkillSlot or
  monsterSkill block that uses the same skill, they will unexpectedly share
  the same maxUses counter)
- Fix reference to undefined variable $skillID in ai_skillUse2()
- Make _stopWhenHit condition not count party members, and stop counting a
  monster as aggressive if it hit you in the past, but then attacked someone
  else
- "Total Damage" display in 's' command now includes damage from skills
- "exp reset" command now resets damage statistics in 's' command
- Portal recording has been fixed.
- Fix teleport using clip.

New features:
- Mask password input display '*' instead of your real password (Only on linux
  console)
- If old files (from before the CVS cleanup) are found, warn the user
  and bail out. Too many people are reporting "bugs" that are a result
  of conflicts with old files.
- More avoidGM modes. See the news avoid the new avoidGM_near config option.
- The autoresponse system is now back, and improved. The chat_resp.txt